<resources>
    <integer name="animation_duration_medium">1000</integer>
    <string name="app_name" translatable="false">OpenTheDoor</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgit_password">Forget Password ?</string>
    <string name="dont_have_account">Dont Have Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="have_an_account">Have An Account? </string>
    <string name="confirm">Confirm password</string>
    <string name="verify">Verify</string>
    <string name="send_code">Send Code</string>
    <string name="user_name">User Name</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="add_payment">Add Payment</string>
    <string name="payment">Payment</string>
    <string name="reviews">Reviews</string>
    <string name="statistics">Statistics</string>
    <string name="promocode">Promocode</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_company">About Company</string>
    <string name="open" translatable="false">Open navigation drawer</string>
    <string name="close" translatable="false">Close navigation drawer</string>
    <string name="edit_profile_date">Edit Profile Data</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="contine">Continue</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New password</string>
    <string name="current_location">Current Location:</string>
    <string name="location">Street,Area,Country,City.</string>
    <string name="find_service">Find Service</string>
    <string name="log_out">Log Out</string>
    <string name="give_bonus">Give Bonus</string>
    <string name="add_notes">Add Notes</string>
    <string name="report_proplem">Report a Proplem</string>
    <string name="service_type">Service Type:</string>
    <string name="service_type_text">maintance</string>
    <string name="service_provider_info">Service Provider Info:</string>
    <string name="service_provider_info_text">10 hr</string>
    <string name="finish_time_service">Finished time of service:</string>
    <string name="finish_time_service_text" translatable="false">01:50:23</string>
    <string name="cancel_service">Cancel Service</string>
    <string name="end_service">End Service</string>
    <string name="search">Search</string>
    <string name="select_service">Select Service</string>
    <string name="service_provider">Select Service Provider</string>
    <string name="promo_code">Promo Code</string>
    <string name="get_gift">Get your gift</string>
    <string name="add_review">Add Review</string>
    <string name="payment_method">Payment Method</string>
    <string name="bank_name_text">Bank Name</string>
    <string name="card_number_text">Card Number</string>
    <string name="cardholder_name">CARDHOLDER Name</string>
    <string name="expire_date">EXPIRE DATE</string>
    <string name="cvv" translatable="false">CVV</string>

    <string name="cvv_text" translatable="false">1234</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="save_card_information">Save Card Information</string>
    <string name="cancel_service_popUp">Cancel Service</string>
    <string name="confirm_now">Confirm Now</string>
    <string name="reorder_service">Reorder Service</string>
    <string name="hoursOfServiceProvider">Hours of service provider:</string>
    <string name="given_bonous">Given bonous:</string>
    <string name="costOfServiceProvider">Cost of service provider:</string>
    <string name="discount">Discount:</string>
    <string name="total_cost">Total cost:</string>
    <string name="minCharge">Minimum charge 100$, Maximum charge 1000$</string>
    <string name="error_connection">Error Connection</string>
    <string name="required">هذا الحقل مطلوب</string>
    <string name="enter_valid_email">برجاء ادخال بريد الكترونى صحيح!</string>
    <string name="pass_is_weak">كلمة المرور ضعيفة</string>
    <string name="password_not_identical">كلمتى المرور غير متطابقتين</string>
    <string name="logining">جارى الدخول</string>
    <string name="signing">جارى التسجيل</string>
    <string name="updatting">جارى التعديل</string>
    <string name="pass_not_equal">كلمتى المرور غير متطابقتين!</string>
    <string name="profile_updated_success">تم تحديث البيانات بنجاح</string>
    <string name="loading">جارى التحميل</string>
    <string name="no_available_data">لا يوجد بيانات حالية</string>
    <string name="item_removed">تم مسح العنصر بنجاح</string>
    <string name="time_to_arrive">minute to arrive</string>
    <string name="hour_price">$/hour</string>
    <string name="current">Current</string>
    <string name="inProgress">InProcess</string>
    <string name="comment">Comment</string>
    <string name="edit">تعديل</string>
    <string name="remove">مسح</string>
    <string name="reviews_num">Num.Reviews:</string>
    <string name="minute_to_arrive" translatable="false">meter to arrive</string>
    <string name="reprot_problem_about">Report aproblem about...</string>
    <string name="report">Report</string>
    <string name="notes_about_provided_service">Notes about the provided services:</string>
    <string name="write_notes_here">Write notes here....</string>
    <string name="sending">جارى الارسال</string>
    <string name="hours">hours</string>
    <string name="login_success">تم الدخول بنجاح</string>
    <string name="plz_select_service_first">يجب اختيار الخدمة اولا !</string>
    <string name="no_available_providers">No Available Providers</string>
    <string name="distance">distance</string>
    <string name="scheduled">Scheduled</string>
    <string name="canceled">Canceled</string>
    <string name="completed">Completed</string>
    <string name="enter_promoCode">Enter your Promocode:</string>
    <string name="cancell">Cancel</string>
    <string name="forgitPassword">نسيت كلمة المرور</string>
    <string name="send">ارسال</string>
    <string name="ending">Ending</string>
    <string name="setings">الاعدادات</string>
    <string name="settings_language">اللغة :</string>
    <string name="language_val">اللغة الانجليزية</string>
    <string name="arabic">اللغة العربية</string>
    <string name="english">اللغة الانجليزية</string>
    <string name="select_language">اختر اللغة:</string>
    <string name="yes">Ok</string>
    <string name="outofApp">logOut of the App ?</string>

    <string name="dismiss">Dismiss</string>
    <string name="code">الكود</string>
    <string name="currency">currency</string>
    <string name="currency_val">Currency</string>
    <string name="email_already_found">هذاالاسم او البريد مسجل مسبقا</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="phone_already_taken">The phone has already been taken.</string>
    <string name="verification_code">Verification Code</string>
    <string name="selectLanguage">Choose Language</string>
    <string name="codee">code:</string>
    <string name="your_verifiction_code">كود التفعيل الخاص بك :</string>
    <string name="signUp_success">تم تسجيل رقم الجوال بنجاح</string>
    <string name="ok">موافق</string>
    <string name="invite_contacts">Invite Friend</string>
    <string name="activation_code">Activation Code</string>
    <string name="paymentMethod">طريقة الدفع</string>
    <string name="payment_wallet">Wallet.</string>
    <string name="payment_cash_on_delivery">Cash Payment.</string>
    <string name="payment_online_credit">Online by Credit Card.</string>
    <string name="select">Select</string>
    <string name="payment_methodd">Payment Method:</string>
    <string name="payment_failed">فشل عملية الدفع, برجاء المحاولة مرة أخرى</string>
    <string name="payment_successfully">تم اتمام الدفع بنجاح</string>
    <string name="free_wallet">شحن المحفظة</string>
    <string name="r_s">R.S</string>
    <string name="my_wallet">My Wallet</string>
    <string name="free_balance">القيمة المراد شحنها</string>
    <string name="the_amount">المبلغ</string>
    <string name="balance">Balance</string>
    <string name="there_are_no_notifications">there are no Notifications.</string>
</resources>
