<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />

        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_watch_later_black_24dp"
            android:title="@string/history" />

        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/balance" />

        <item
            android:id="@+id/reviews"
            android:icon="@drawable/sidemenu_reviews"
            android:title="@string/reviews"
            android:visible="false" />

        <item
            android:id="@+id/statistics"
            android:icon="@drawable/ic_equalizer_black_24dp"
            android:iconTint="@color/colorPrimary"
            android:title="@string/statistics"
            android:visible="false" />

        <item
            android:id="@+id/promocode"
            android:icon="@drawable/ic_local_offer_black_24dp"
            android:title="@string/promocode" />

        <item
            android:id="@+id/notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setings" />

        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/ic_phone_black_24dp"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/about_company"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/about_company" />

        <item
            android:id="@+id/nav_inviteFriend"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/invite_contacts" />
    </group>

</menu>