<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ConfirmationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/serviceProvider_appBar_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/serviceProvider_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/service_provider"
                android:textColor="@android:color/white"
                android:textSize="21sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/serviceConfirmation_back_txtV_id"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_arrow_back_black_24dp"
                android:scaleType="fitXY" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.kofigyan.stateprogressbar.StateProgressBar
        android:id="@+id/confirmation_state_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serviceProvider_appBar_layout_id"
        app:spb_animateToCurrentProgressState="true"
        app:spb_currentStateDescriptionColor="@color/colorPrimary"
        app:spb_currentStateNumber="three"
        app:spb_maxStateNumber="three"
        app:spb_stateBackgroundColor="#BDBDBD"
        app:spb_stateDescriptionColor="#808080"
        app:spb_stateForegroundColor="@color/colorPrimary"
        app:spb_stateNumberBackgroundColor="#808080"
        app:spb_stateNumberForegroundColor="#eeeeee" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/margin_left"
        android:background="@drawable/border"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmation_state_progress">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/map_address"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/location"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/location"
            app:layout_constraintTop_toBottomOf="@id/location" />

        <TextView
            android:id="@+id/service_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/service_type"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/location"
            app:layout_constraintTop_toBottomOf="@id/location_text" />

        <TextView
            android:id="@+id/service_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/service_type"
            android:drawablePadding="7dp"
            android:text="@string/service_type_text"
            app:layout_constraintStart_toStartOf="@id/location"
            app:layout_constraintTop_toBottomOf="@id/service_type" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_left"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/service_type_text" />

        <TextView
            android:id="@+id/service_provider_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/service_provider_info"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/location"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:text="A.Ali"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/confirmation_ratingBar_id"
            app:layout_constraintStart_toStartOf="@id/location"
            app:layout_constraintTop_toBottomOf="@id/service_provider_info" />

        <RatingBar
            android:id="@+id/confirmation_ratingBar_id"
            style="@style/Base.Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_name" />

        <TextView
            android:id="@+id/price_val_txtV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="10"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@id/location"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/hour_price"
            app:layout_constraintStart_toEndOf="@id/price_val_txtV"
            app:layout_constraintTop_toTopOf="@id/price_val_txtV" />

        <TextView
            android:id="@+id/arrival_time_val_txtV_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:text="10"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@id/location"
            app:layout_constraintTop_toBottomOf="@id/price" />

        <TextView
            android:id="@+id/arrival_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/distance"
            app:layout_constraintStart_toEndOf="@id/arrival_time_val_txtV_id"
            app:layout_constraintTop_toTopOf="@id/arrival_time_val_txtV_id" />

        <ImageView
            android:id="@+id/make_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:layout_marginRight="@dimen/margin_left"
            android:src="@drawable/make_call"
            app:layout_constraintBottom_toBottomOf="@id/arrival_time"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/view_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_left"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/arrival_time" />

        <TextView
            android:id="@+id/paymentMethod_txtV_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/payment_methodd"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/location"
            app:layout_constraintTop_toBottomOf="@+id/view_2" />

        <TextView
            android:id="@+id/paymentMethod_val_txtV_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:text="A.Ali"
            android:drawableStart="@drawable/amount_money"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@id/location"
            app:layout_constraintTop_toBottomOf="@id/paymentMethod_txtV_id" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/select_payment_type_btn_id"
            android:text="@string/select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/paymentMethod_txtV_id" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="Confirm Now"
            app:layout_constraintTop_toBottomOf="@+id/paymentMethod_val_txtV_id" />

        <Button
            android:id="@+id/scheduled_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="Scheduled"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/confirm_button" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/cancell"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/scheduled_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>